--- a/App/R1/express_reg1/simple_ui/index.html
+++ b/App/R1/express_reg1/simple_ui/index.html
@@ -172,9 +172,9 @@
                             ${v.address}, ${v.status}<br/>
                         </td>
                         <td>
-                            <a href="#">edit</a> | 
-                            <a href="#">view</a> | 
-                            <a href="#">delete</a>
+                            <a href="#" class="edit">edit</a> | 
+                            <a href="#" class="view">view</a> |
+                            <a href="#" class="delete">delete</a>
                         </td>
                     </tr>
                 `;
