--- a/App/R1/express_reg1/simple_ui/index.html
+++ b/App/R1/express_reg1/simple_ui/index.html
@@ -158,6 +158,7 @@
             get_table_data(user_data);
         })
 
+        let id = 0;
         function get_table_data(udata){
             $("#table_user tbody").empty();
             udata.forEach(v => {
@@ -172,15 +173,29 @@
                             ${v.address}, ${v.status}<br/>
                         </td>
                         <td>
-                            <a href="#" class="edit">edit</a> | 
-                            <a href="#" class="view">view</a> |
-                            <a href="#" class="delete">delete</a>
+                            <a href="#" class="edit" dt="${id}">edit</a> | 
+                            <a href="#" class="view" dt="${id}">view</a> |
+                            <a href="#" class="delete" dt="${id}">delete</a>
                         </td>
                     </tr>
                 `;
                 $("#table_user tbody").append(el);
+                id++;
             });
         }
+    
+        $(".edit").click(function(){
+            id = $(this).attr("dt");
+            console.log(id)
+        })
+
+        $("#search").on("keyup", function(){
+            txt = $(this).val().toLowerCase();
+            $("#table_user tr").filter(function(){
+                $(this).toggle($(this).text().toLowerCase().indexOf(txt) > -1);
+            })
+        })
+
     </script>
 
 
